--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "el-greco-backend",
   "version": "1.0.0",
-  "description": "Backend \u03b3\u03b9\u03b1 \u03c4\u03b7 \u03b4\u03b9\u03b1\u03c7\u03b5\u03af\u03c1\u03b9\u03c3\u03b7 \u03c4\u03b7\u03c2 \u03b5\u03c6\u03b1\u03c1\u03bc\u03bf\u03b3\u03ae\u03c2 El Greco",
+  "description": "Backend για τη διαχείριση της εφαρμογής El Greco",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -19,12 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^5.0.1",
     "swagger-jsdoc": "^6.2.8",
-    "zod": "^3.23.8",
-    "cookie-parser": "^1.4.6",
-    "bcrypt": "^5.1.1",
-    "helmet": "^7.1.0",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.4.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
