--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,3 +2,5 @@ PORT=10000
 MONGO_URI=mongodb+srv://<user>:<pass>@<cluster>/<db>?retryWrites=true&w=majority
 JWT_SECRET=βάλε_δυνατό_μυστικό
 FRONTEND_ORIGIN=https://<το-frontend-σου>.vercel.app
+
+COOKIE_DOMAIN=webapp-3-five.vercel.app
