--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,13 +1,22 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)",  "destination": "https://webapp-oowk.onrender.com/api/$1" },
-    { "source": "/auth/(.*)", "destination": "https://webapp-oowk.onrender.com/auth/$1" }
+    {
+      "source": "/api/(.*)",
+      "destination": "https://webapp-oowk.onrender.com/api/$1"
+    },
+    {
+      "source": "/auth/(.*)",
+      "destination": "https://webapp-oowk.onrender.com/auth/$1"
+    }
   ],
   "headers": [
     {
       "source": "/auth/(.*)",
       "headers": [
-        { "key": "Cache-Control", "value": "no-store" }
+        {
+          "key": "Cache-Control",
+          "value": "no-store"
+        }
       ]
     }
   ]
