--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,6 @@
+# Backend environment variables
 PORT=10000
 MONGO_URI=mongodb+srv://<user>:<pass>@<cluster>/<db>?retryWrites=true&w=majority
-JWT_SECRET=βάλε_δυνατό_μυστικό
-FRONTEND_ORIGIN=https://<το-frontend-σου>.vercel.app
+JWT_SECRET=replace_with_a_long_random_string
+# If set, CORS will pin to this origin; otherwise it reflects request origin (with credentials enabled)
+FRONTEND_ORIGIN=
