--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,4 @@
-# Backend environment variables
-PORT=10000
 MONGO_URI=mongodb+srv://<user>:<pass>@<cluster>/<db>?retryWrites=true&w=majority
-JWT_SECRET=replace_with_a_long_random_string
-# If set, CORS will pin to this origin; otherwise it reflects request origin (with credentials enabled)
-FRONTEND_ORIGIN=
+JWT_SECRET=please_change_me_to_a_random_32b_string
+ALLOWED_ORIGINS=https://<your-vercel-app>.vercel.app
+PORT=10000
