--- a/backend/package.json
+++ b/backend/package.json
@@ -16,15 +16,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^6.12.0",
     "mongoose": "^7.0.2",
-    "multer": "^1.4.5-lts.1",
-    "swagger-ui-express": "^5.0.1",
-    "swagger-jsdoc": "^6.2.8",
-    "zod": "^3.23.8",
-    "cookie-parser": "^1.4.6",
-    "bcrypt": "^5.1.1",
-    "helmet": "^7.1.0",
-    "express-mongo-sanitize": "^2.2.0",
-    "express-rate-limit": "^7.4.0"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
