--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,6 +1,12 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "https://webapp-oowk.onrender.com/api/:path*" },
-    { "source": "/auth/:path*", "destination": "https://webapp-oowk.onrender.com/auth/:path*" }
+    {
+      "source": "/api/(.*)",
+      "destination": "https://<RENDER_URL>/api/$1"
+    },
+    {
+      "source": "/auth/(.*)",
+      "destination": "https://<RENDER_URL>/auth/$1"
+    }
   ]
 }
