--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,11 +2,11 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "https://webapp-oowk.onrender.com/api/$1"
+      "destination": "https://<RENDER_URL>/api/$1"
     },
     {
       "source": "/auth/(.*)",
-      "destination": "https://webapp-oowk.onrender.com/auth/$1"
+      "destination": "https://<RENDER_URL>/auth/$1"
     }
   ]
 }
